# Phoenix-Flames

./: .gitignore  README.md  planning.md
docs/: Rust语言调研报告.md  What's inside
docs/Feasibility/: feasibility.md
docs/final_report/: 汇报.pptx  结题报告.md
docs/how-to-build-from-kernel_all/: linker.lds_pp  sel4test-driver-image-x86_64-pc99
docs/midterm/: midterm.pptx
docs/preresearch/: Topics-2022-simple.md  初拟方向.md  往年情况参考.md  部分参考项目整理.md
docs/presearch/: Topics-2022-simple.md  初拟方向.md  往年情况参考.md  部分参考项目整理.md
docs/research/: Rust语言调研报告.md  research.md  seL4 可能的优化方向（调研）.md  sel4调研报告.md  上下文切换.md  对进程调度的调研.md
docs/research/IPC-part/: research-IPC-part(full).md  research-IPC.md  调研优化方向.md
lab4/: Lab4-report.md  README.md  Ray性能相关文档.md  test2.py
lab4/codes/: markov_limit.py  markov_new.py  markov_new_modified.py  no_ray.py  rec.md
src/how_to_compile_sel4_manually/: README.md
src/sel4-Rust/: Cargo.toml  build.md  build.sh  how_to_run.md  simulate.sh
src/sel4-Rust/bootloader/: README.md
src/sel4-Rust/sel4-Rust/: Cargo.toml
src/sel4-Rust/sel4-Rust/src/: cnode.rs  failures.rs  inlines.rs  lang_items.rs  lib.rs  mod.rs  object.rs  util.rs
src/sel4-Rust/sel4-Rust/src/kernel/: cspace.rs  fastpath.rs  mod.rs  notification.rs  tcb.rs  thread.rs
src/sel4-Rust/sel4-Rust/src/libsel4/: errors.rs  mod.rs  objecttype.rs
src/sel4-Rust/sel4-Rust/src/machine/: mod.rs  registerset.rs
src/sel4-Rust/sel4-Rust/src/model/: statedata.rs
src/sel4-Rust/sel4-Rust/src/types/: basic_types.rs  compound_types.rs  mod.rs
src/sel4-Rust/src/: entry.asm  (+5 more)
src/temp/: README.md
(+28 files in other folders)
